src/objects/ORDO_Assets_usage__c.object
<CustomObject>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets usage</relationshipLabel>
        <relationshipName>Assets_usage</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus__c</fullName>
        <label>Bus</label>
        <referenceTo>ORDO_Bus__c</referenceTo>
        <relationshipLabel>Assets usage</relationshipLabel>
        <relationshipName>Assets_usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Usage__c</fullName>
        <label>End Usage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Usage__c</fullName>
        <label>Start Usage</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Assets usage</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Assets usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>